@@ -38,24 +38,66 @@ public class ParcelaService {
     }
 
     @Transactional
-    public String pagarParcela(Long idEmprestimo) {
+    public String pagarOuAnteciparParcelas(Long idEmprestimo, Integer numeroParcelas) {
+        // Se não foi fornecido o número de parcelas, pagamos a próxima
+        if (numeroParcelas == null) {
+            return pagarParcela(idEmprestimo);
+        }
+
+        // Caso contrário, fazemos a antecipação das parcelas
+        return anteciparParcelas(idEmprestimo, numeroParcelas);
+    }
+
+    private String pagarParcela(Long idEmprestimo) {
+        // Buscar as parcelas pendentes ordenadas pela data de vencimento
         List<Parcela> pendentes = repository.buscarParcelasPendentesOrdenadas(idEmprestimo);
 
         if (pendentes.isEmpty()) {
             return "Todas as parcelas deste empréstimo já foram pagas.";
         }
 
-        Parcela proxima = pendentes.getFirst();
+        // Pega a próxima parcela pendente
+        Parcela proxima = pendentes.get(0);
 
+        // Verifica se a próxima parcela está vencida
         if (proxima.getDataVencimento().isAfter(LocalDate.now())) {
             return "A próxima parcela vence em " + proxima.getDataVencimento() + ". Nenhuma parcela em atraso para pagamento.";
         }
 
-        validator.validarPagamento(proxima);
+        // Marca a parcela como paga
         proxima.setPaga(true);
         repository.save(proxima);
 
         return "Parcela com vencimento em " + proxima.getDataVencimento() + " paga com sucesso.";
     }
 
+    private String anteciparParcelas(Long idEmprestimo, Integer numeroParcelas) {
+        List<Parcela> pendentes = repository.buscarParcelasPendentesOrdenadas(idEmprestimo);
+
+        // Verifica se o número de parcelas a ser antecipado é válido
+        if (pendentes.size() < numeroParcelas) {
+            return "Não há parcelas suficientes para antecipar.";
+        }
+
+        BigDecimal totalPago = BigDecimal.ZERO;
+        for (int i = 0; i < numeroParcelas; i++) {
+            Parcela parcela = pendentes.get(i);
+
+            // Verifica se a parcela já foi paga, e se sim, pula para a próxima
+            if (parcela.getPaga()) {
+                continue;
+            }
+
+            // Marca a parcela como paga
+            parcela.setPaga(true);
+            totalPago = totalPago.add(parcela.getValor());
+
+            // Atualiza a data de vencimento para a data atual (indicando que foi antecipada)
+            parcela.setDataVencimento(LocalDate.now());
+
+            repository.save(parcela);
+        }
+
+        return "Parcelas antecipadas com sucesso. Total pago: " + totalPago;
+    }
 }
